--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ menu:
   Archives: archives
   Categories: categories
   Tags: tags
-  About: about
+#  About: about
 
 # Customize
 customize:
@@ -24,14 +24,14 @@ customize:
         follow: https://github.com/jiangxiayun
     highlight: monokai
     sidebar: right # sidebar position, options: left, right or leave it empty
-    thumbnail: true # enable posts 缩略图, options: true, false
+    thumbnail: false # enable posts 缩略图, options: true, false
     favicon: css/images/favicon.ico # path to favicon
     social_links:
         github: https://github.com/jiangxiayun
-        twitter: /
-        facebook: /
-        dribbble: /
-        rss: /
+#        twitter: /
+#        facebook: /
+#        dribbble: /
+#        rss: /
     social_link_tooltip: true # enable the social link tooltip, options: true, false
 
 # Widgets
